<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kobuki_bringup</name>
  <version>0.0.1</version>
  <description>Launch file for ROS 2 for the micro-ROS demo based on a Kobuki</description>
  <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>kobuki_description</depend>
  <depend>odom_to_tf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>