<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>micro-ros_kobuki-demo_kobuki-description</name>
  <version>0.0.1</version>
  <description>micro-ros_kobuki-demo_kobuki-description for ROS 2 adapted from https://github.com/yujinrobot/kobuki</description>
  <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
